tests/typing/bad/testfile-multiple_definitions2-1.scala
class A { def m() { }; def m(): Int = 0 }
object Main { def main(args: Array[String]) { } }
